# lxa-iobus

./: .codespellrc  .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  TROUBLESHOOTING.rst  adc_tool.py  can_isp.py  invoke_isp.py  pyproject.toml  setup.cfg  setup.py  setup.sh  tox.ini
.github/workflows/: black.yml  check-and-build.yaml  check-and-publish.yaml  flake8.yml  qa.yaml
contrib/systemd/: 80_can0-iobus.link  80_can0-iobus.network  lxa-iobus.service
doc/source/: architecture.rst  can_canopen.rst  conf.py  contributing.rst  getting_started.rst  glossary.rst  index.rst  rest.rst  troubleshooting.rst  upgrade.rst  web.rst
ethmux/: __main__.py  manager.py  nodes.py  service.py  thread.py
loader/: Makefile  soft_reset.s
lpc11xx-can-isp/: .gitignore  Makefile  README  README.rst
lpc11xx-can-isp/lpc11xxcanisp/: can_isp.py
lpc11xxcanisp/: __init__.py  can_isp.py  invoke_isp.py
lpc11xxcanisp/loader/: reset.s
lxa_iobus/: __init__.py  canopen.py  network.py  node.py  node_drivers.py  node_input.py  object_directory.py  utils.py
lxa_iobus/cli/: __init__.py  lpc11xxcanisp_invoke.py  lpc11xxcanisp_program.py  optick.py  server.py
lxa_iobus/lpc11xxcanisp/: can_isp.py
lxa_iobus/node/: base_node.py  bus_node.py  object_directory.py  products.py  remote_node.py
lxa_iobus/server/: canopen.py  node_drivers.py  nodes.py  server.py
remotelab_io/: Makefile  README.rst  __main__.py  client.py  domain.py  manager.py  nodes.py  service.py  thread.py
remotelab_io/server/: canopen.py  node_drivers.py  nodes.py  server.py
(+10 files in other folders)
